<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/latar"
    tools:context=".Menu1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/fp"
            android:textAlignment="center"
            android:textColor="@color/judul"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nm"
                    android:textColor="@color/label"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/nam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mn"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/al"
                    android:textColor="@color/label"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/masal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/ma"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tl"
                    android:textColor="@color/label"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/mastel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mt"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnok"
            android:layout_width="150dp"
            android:layout_height="49dp"
            android:layout_gravity="end"
            android:layout_marginBottom="150dp"
            android:layout_marginRight="0dp"
            android:background="@color/btn"
            android:text="@string/btn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>